# Forecast-EV-Demand-using-GNN

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: generate_synth.py  infer.py  rank_sites.py  train.py
src/evdemand/: accessibility.py  cli.py  data.py  infer.py  model.py  selection.py  training.py
